--- a/src/posts/primer-post.mdx
+++ b/src/posts/primer-post.mdx
@@ -1,7 +1,35 @@
+---
+title: Por qué debería seguir aprendiendo estructuras de datos y algoritmos
+description: Con el surgimiento generalizado de la inteligencia artificial, muchos ahora asumen que hay menos razones paratos y algoritmos es muy útil.
+slug: primer-post
+published: true
+publishedOn: '26 julio 2023'
+estimatedReadingTime: 5 min
+---
+
+
+Hola amiguitos jeje
+
+## My h2Title
+
+Here is an image:
+
+There is a code snippet below:
+```tsx
+export function myComponent(){
+    return (
+        <p>test</p>
+    )
+}
+```
+
+CSS:
+
+```css
 :root {
   --background-color: hsl(0, 0%, 0%);
   --color: hsl(0, 0%, 100%);
-  --gray-color: hsl(0, 0%, 58%);
+  --gray-color:#a4adb6;
 }
 
 ::-webkit-scrollbar {
@@ -33,8 +61,14 @@
   background-image: radial-gradient(farthest-side at 50% 50%, #2a2a2a, transparent);
 }
 
-.container {
-  max-width: 120rem;
+.bodyContainer{
+  max-width: 160rem;
   margin-inline: auto;
   padding-inline: 2rem;
 }
+
+.mainContainer{
+  max-width: 120rem;
+  margin-inline: auto;
+}
+```
