Refatoring, styles improvments

--- a/src/posts/primer-post.mdx
+++ b/src/posts/primer-post.mdx
@@ -7,7 +7,7 @@ publishedOn: '26 julio 2023'
 estimatedReadingTime: 5 min
 ---
 
-Hola amiguitos jeje
+React es una biblioteca JavaScript de código abierto que ha revolucionado el desarrollo de aplicaciones web. Creada por Facebook, React permite construir interfaces de usuario interactivas y dinámicas de manera eficiente y sencilla. En este breve post, exploraremos los conceptos básicos de React y por qué ha ganado tanta popularidad entre los desarrolladores.
 
 ## My h2Title
 
