--- a/src/posts/segundo-post.mdx
+++ b/src/posts/segundo-post.mdx
@@ -7,9 +7,11 @@ publishedOn: '27 julio 2023'
 estimatedReadingTime: 10 min
 ---
 
+React es una biblioteca JavaScript de código abierto que ha revolucionado el desarrollo de aplicaciones web. Creada por Facebook, React permite construir interfaces de usuario interactivas y dinámicas de manera eficiente y sencilla. En este breve post, exploraremos los conceptos básicos de React y por qué ha ganado tanta popularidad entre los desarrolladores.
+
 ## My h2Title
 
-Hi
+React es una biblioteca JavaScript de código abierto que ha revolucionado el desarrollo de aplicaciones web. Creada por Facebook, React permite construir interfaces de usuario interactivas y dinámicas de manera eficiente y sencilla. En este breve post, exploraremos los conceptos básicos de React y por qué ha ganado tanta popularidad entre los desarrolladores.
 
 There is a code snippet below:
 ```tsx
